[gd_scene load_steps=7 format=3 uid="uid://c2uek6s5dv2o4"]

[ext_resource type="Script" path="res://data/ui/top.gd" id="1_i107f"]
[ext_resource type="Script" path="res://data/ui/menu/create_character/create_character.gd" id="1_smeqp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kvaoj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_my3hm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ypelt"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qoylh"]

[node name="create_character" type="PanelContainer" node_paths=PackedStringArray("close_button", "name_line", "famale_button", "male_button", "texture_area", "next_skin_button", "previous_skin_button", "confirm_button", "back_button")]
custom_minimum_size = Vector2(250, 200)
offset_right = 482.0
offset_bottom = 256.0
script = ExtResource("1_smeqp")
close_button = NodePath("content/top_bar/margin/close")
name_line = NodePath("content/margin/content/customization/margin/styles/name")
famale_button = NodePath("content/margin/content/sex/content/female")
male_button = NodePath("content/margin/content/sex/content/male")
texture_area = NodePath("content/margin/content/sex/content/texture")
next_skin_button = NodePath("content/margin/content/customization/margin/styles/skin/next")
previous_skin_button = NodePath("content/margin/content/customization/margin/styles/skin/previous")
confirm_button = NodePath("content/margin/content/customization/margin/styles/buttons/confirm")
back_button = NodePath("content/margin/content/customization/margin/styles/buttons/back")

[node name="content" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="top_bar" type="HBoxContainer" parent="content"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
script = ExtResource("1_i107f")
target_node = NodePath("../..")

[node name="margin" type="MarginContainer" parent="content/top_bar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="title" type="Label" parent="content/top_bar/margin"]
layout_mode = 2
text = "AparÃªncia"

[node name="close" type="Button" parent="content/top_bar/margin"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
size_flags_horizontal = 8
theme_override_styles/focus = SubResource("StyleBoxEmpty_kvaoj")

[node name="margin" type="MarginContainer" parent="content"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="content" type="HBoxContainer" parent="content/margin"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="sex" type="PanelContainer" parent="content/margin/content"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="content" type="VBoxContainer" parent="content/margin/content/sex"]
layout_mode = 2
alignment = 2

[node name="texture" type="Sprite2D" parent="content/margin/content/sex/content"]
position = Vector2(74, 65)
scale = Vector2(2, 2)
hframes = 4
vframes = 4

[node name="male" type="Button" parent="content/margin/content/sex/content"]
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_my3hm")
text = "Masculino"

[node name="female" type="Button" parent="content/margin/content/sex/content"]
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_my3hm")
text = "Feminino"

[node name="customization" type="Panel" parent="content/margin/content"]
layout_mode = 2
size_flags_horizontal = 3

[node name="margin" type="MarginContainer" parent="content/margin/content/customization"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="styles" type="VBoxContainer" parent="content/margin/content/customization/margin"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="name" type="LineEdit" parent="content/margin/content/customization/margin/styles"]
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_ypelt")

[node name="skin" type="HBoxContainer" parent="content/margin/content/customization/margin/styles"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="previous" type="Button" parent="content/margin/content/customization/margin/styles/skin"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_qoylh")

[node name="hairstyle" type="Label" parent="content/margin/content/customization/margin/styles/skin"]
layout_mode = 2
size_flags_horizontal = 3
text = "Skin"
horizontal_alignment = 1
vertical_alignment = 1

[node name="next" type="Button" parent="content/margin/content/customization/margin/styles/skin"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_qoylh")

[node name="buttons" type="VBoxContainer" parent="content/margin/content/customization/margin/styles"]
layout_mode = 2
size_flags_vertical = 3
alignment = 2

[node name="confirm" type="Button" parent="content/margin/content/customization/margin/styles/buttons"]
layout_mode = 2
size_flags_vertical = 8
text = "Confirmar"

[node name="back" type="Button" parent="content/margin/content/customization/margin/styles/buttons"]
layout_mode = 2
size_flags_vertical = 8
text = "Voltar"

[connection signal="pressed" from="content/top_bar/margin/close" to="." method="_on_close_pressed"]
[connection signal="pressed" from="content/margin/content/sex/content/male" to="." method="_on_male_pressed"]
[connection signal="pressed" from="content/margin/content/sex/content/female" to="." method="_on_female_pressed"]
[connection signal="pressed" from="content/margin/content/customization/margin/styles/skin/previous" to="." method="_on_previous_pressed"]
[connection signal="pressed" from="content/margin/content/customization/margin/styles/skin/next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="content/margin/content/customization/margin/styles/buttons/confirm" to="." method="_on_confirm_pressed"]
[connection signal="pressed" from="content/margin/content/customization/margin/styles/buttons/back" to="." method="_on_close_pressed"]
